--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,9 @@
     <div class="{{ if .HasDNSSEC }}text-red-600 font-bold{{ else }}text-green-200{{ end }}">
       {{ if .HasDNSSEC }}Enabled{{ else }}Disabled{{ end }}
     </div>
-    <div>{{ .CheckedAt }}</div>
+    <div title="{{ .CheckedAt }}">
+      {{ if .CheckedAt }}{{ relativeTime .CheckedAtTime }}{{ end }}
+    </div>
   </div>
   {{ end }}
   <div class="flex justify-between mt-4">
