why are there two of these

--- a/templates/index.html
+++ b/templates/index.html
@@ -100,7 +100,7 @@
                             >{{ .Class }}</span
                         >
                         {{ else }}
-                        <span class="ml-2 text-xs text-gray-400">unknown</span>
+                        <span class="ml-2 text-xs text-gray-200">(uncategorized)</span>
                         {{ end }}
                     </td>
                     <td class="px-2 py-1">
