--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,7 @@
     </head>
     <body class="p-4">
         <h1 class="text-2xl mb-2">DNSSEC Adoption In The Tranco Top 1000</h1>
-        <p class="mb-4">
-            <a href="/changes" class="text-blue-700">Status changes</a>
-        </p>
+        <p class="mb-4"></p>
         <div class="mb-4 grid grid-cols-1 sm:grid-cols-3 gap-4">
             <div class="bg-white shadow rounded-lg p-4 text-center">
                 <div class="text-xs font-semibold text-gray-500 uppercase">
@@ -102,7 +100,9 @@
                             >{{ .Class }}</span
                         >
                         {{ else }}
-                        <span class="ml-2 text-xs text-gray-200">(uncategorized)</span>
+                        <span class="ml-2 text-xs text-gray-200"
+                            >(uncategorized)</span
+                        >
                         {{ end }}
                     </td>
                     <td class="px-2 py-1">
